# noteshrunk

./: .gitignore  CHANGELOG.md  README.md  noteshrunk.py  pyproject.toml  requirements.txt
src/: noteshrunk.py
